# dbt-multi-project

./: .env  LICENSE  README.md  docker-compose.yml  pyproject.toml
transform/: .user.yml  profiles.yml
transform/base/: .gitignore  dbt_project.yml  packages.yml
transform/base/data_marts/marketplace_others/: dbt_project.yml
transform/base/data_marts/marketplace_others/models/silver/: obt_payment_type_by_other_states.sql
transform/base/data_marts/marketplace_others/models/silver/obt_payment_type_by_other_states/: obt_payment_type_by_other_states.sql
transform/base/data_marts/marketplace_sp/: dbt_project.yml
transform/base/data_marts/marketplace_sp/models/silver/: obt_payment_type_by_sp_state.sql
transform/base/data_marts/marketplace_sp/models/silver/obt_payment_type_by_sp_state/: obt_payment_type_by_sp_state.sql  obt_payment_type_by_sp_state.yml
transform/base/models/bronze/: sources.yml
transform/base/models/gold/: obt_payment_type_by_state.sql
transform/base/models/gold/obt_payment_type_by_state/: obt_payment_type_by_state.yml
transform/marketplace_others/: dbt_project.yml
transform/marketplace_others/dbt_packages/: base
transform/marketplace_others/models/silver/obt_payment_type_by_other_states/: obt_payment_type_by_other_states.yml
transform/marketplace_sp/: dbt_project.yml  packages.yml
transform/marketplace_sp/macros/: generate_schema_name.sql
