[tool.poetry]
name = "dbt-multi-project"
version = "0.1.0"
description = ""
authors = ["Gabriel Bossardi <contato@gabrielbossardi.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-postgres = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
